--- a/Health.ipynb
+++ b/Health.ipynb
@@ -235,12 +235,19 @@
     "plt.plot(SysBp,age, color='green', marker='+', linestyle='dotted')\n",
     "\n",
     "# add a title\n",
-    "plt.title(\"Nominal GDP\")\n",
+    "plt.title(\"Blood PRessure Acc to Age\")\n",
     "\n",
     "# add a label to the y-axisYears\n",
     "plt.ylabel(\"Age\")\n",
     "plt.xlabel(\"BP\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "LineGraph According to the varying number of age and their blood pressure."
    ]
   },
   {
@@ -470,6 +477,13 @@
     "plt.legend()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
